# stresskit

./: .coverage  .gitignore  README.md  demo.cast  pyproject.toml  report.json  results.csv
.github/workflows/: ci.yml
stresskit/: __init__.py  cli.py  comparator.py  engine.py  exporter.py  history.py  models.py  reporter.py  stats.py
stresskit.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_comparator.py  test_engine.py  test_stats.py
